# learning_OpenCL

./: README.md  kernel.cpp  microbenchmarks.cpp  saxpy.cpp  saxpy_kernel.cpp
sum_values_project/: about_OpenCL_Extensions.txt  all_kernels.ocl  float_sum.ocl  int_sum.ocl  list_sum_floats.ocl  list_sum_int.ocl  list_sum_mix.ocl  mix_sum.ocl
sum_values_project/include/JC/: data.hpp  matrix.hpp  openCLHost.hpp  openCLUtil.hpp  util.h
sum_values_project/src/: CMakeLists.txt  all_kernels.ocl
sum_values_project/src/sumNums/: CMakeLists.txt  sumNums.cpp
